force-app/main/default/objects/NI_Career_Path__c/NI_Career_Path__c.object-meta.xml
<CustomObject>
    <description>This object allows employees and managers to document the other departments where the employee may want to work in the future, the employees interest in becoming a manager, and general comments about the employee&apos;s career goals.</description>
    <label>Career Path</label>
    <nameField>
        <displayFormat>Career Path {YYYY}-{0}</displayFormat>
        <label>NI Employee Career Path Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Path</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>