force-app/main/default/objects/NI_Career_Path__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the employee interested in becoming a manger?</description>
    <inlineHelpText>Select if you are interested in becoming a manager.</inlineHelpText>
    <label>Manager</label>
    <type>Checkbox</type>
</CustomField>