force-app/main/default/objects/NI_Career_Path__c/fields/NI_Employee_Performance_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>NI_Employee_Performance_Evaluation__c</fullName>
    <label>NI Employee Performance Evaluation</label>
    <referenceTo>NI_Employee_Performance_Evaluation__c</referenceTo>
    <relationshipName>NI_Employee_Career_Path</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>